complete GarminProcessingController